Cherry-pick 284145@main (bacb3d487ac0). https://bugs.webkit.org/show_bug.cgi?id=280153

[GStreamer][WebCodecs] Assertion failure ASSERTION FAILED: canSafelyBeUsed()
    https://bugs.webkit.org/show_bug.cgi?id=280153

    Reviewed by Xabier Rodriguez-Calvar.

    Make the audio and video decoders usable from non-main thread as weak pointers. That was already the
    case for the encoders.

    * Source/WebCore/platform/audio/gstreamer/AudioDecoderGStreamer.cpp:
    (WebCore::GStreamerInternalAudioDecoder::GStreamerInternalAudioDecoder):
    * Source/WebCore/platform/graphics/gstreamer/VideoDecoderGStreamer.cpp:
    (WebCore::GStreamerInternalVideoDecoder::GStreamerInternalVideoDecoder):

    Canonical link: https://commits.webkit.org/284145@main

Canonical link: https://commits.webkit.org/282416.175@webkitglib/2.46